2005-11-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.2.0

	* libpam_misc/Makefile.am: Increase release number (for change
	from 2005-11-09)

	* NEWS: Adjust for 0.99.2.0

2005-11-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/include/security/_pam_compat.h: Fix wrong #ifdef nesting.
	Redefine PAM_CHANGE_EXPIRED_AUTHTOK [#604380]

2005-11-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_handlers.c: Replace code for all dlopen variants with
	a generic wrapper.
	* libpam/pam_dynamic.c: Implement generic wrapper for dlopen.
	* libpam/pam_dynamic.h: Provide prototypes.
	For Mac OS X support [#534205]

2005-11-09  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_access/pam_access.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name.
	* modules/pam_time/pam_time.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name. Allow unset tty.
	(logic_member): Allow matching ':' in tty name.
	* modules/pam_group/pam_group.c (pam_sm_acct_mgmt): Parse correctly
	full path tty name. Allow unset tty.
	(logic_member): Allow matching ':' in tty name.

	* libpam_misc/misc_conv.c (read_string): Read only up to EOL if stdin
	is not terminal.

2005-11-07  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c (_unix_verify_shadow): Use
	correct variable names.

2005-11-06  Steve Langasek <vorlon@debian.org>

	* modules/pam_env/pam_env.c: don't treat a missing
	/etc/environment as a fatal error when attempting to read it,
	and try to read this file by default; this restores the behavior
	from Linux-PAM 0.76.

2005-11-02  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/support.c (_unix_getpwnam): Fix typo [#1224807]
	by ohyajapn.

	* modules/pam_unix/pam_unix_passwd.c (_unix_verify_shadow): Change the
	logic when comparing dates to handle corner cases better [#1245888].

2005-10-31  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_filter/pam_filter.c: Use XCASE only if defined
	[#624214]

2005-10-27  Thorsten Kukuk  <kukuk@suse.de>
